--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,10 @@
 kotlin.code.style=official
 kotlin.daemon.jvmargs=-Xmx3072M
 
+# Für Kotlin/Native Build-Prozess (z.B. iOS)
+kotlin.native.maxHeapSize=6144m
+kotlin.native.memoryModel=experimental
+
 #Gradle
 org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8
 org.gradle.configuration-cache=true
